--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
-<div class="banner parallax" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1508317469940-e3de49ba902e?auto=format&fit=crop&w=1500&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');">
+<div class="banner parallax" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1498622248929-1d52d466f4a5?auto=format&fit=crop&w=1351&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');">
   <div class="banner-content">
     <h1 class="text-center">the answer's in your pocket</h1>
-    <h2 class="text-center">project management transparency wherever you are in the world</h2>
+    <h2 class="text-center">project-management transparency wherever you are in the world</h2>
     <%= render "shared/search" %>
   </div>
 </div>
