--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%= render "navbar_home" %>
+<%= render "shared/banner" %>
+
+<div class="container">
+  <div class="row content">
+    <h4 class="divider text-center">
+      <span class="sans">there's no limit. ship it.</span>
+        </div>
+      <hr>
+    </h4>
+</div>
