--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row content">
     <h4 class="divider text-center">
-      <span class="sans">there's no limit. ship it.</span>
+      <span class="sans">get it. do it. ship it.</span>
         </div>
       <hr>
     </h4>
