--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,60 @@
 
-<%= render "shared/banner" %>
+<%= render "navbar_home" %>
+
+<div class="banner parallax" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1505798577917-a65157d3320a?auto=format&fit=crop&w=2250&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');">
+  <div class="banner-content">
+    <h1 class="text-center">the answer's in your pocket</h1>
+    <h2 class="text-center">project-management transparency wherever you are in the world</h2>
+    <a href="/users/sign_in.html" class="btn btn-primary">get started now</a>
+  </div>
+</div>
 
 <div class="container">
-  <div class="row content">
-    <h4 class="divider text-center">
-      <span class="sans">get it. do it. ship it.</span>
-        </div>
-      <hr>
-    </h4>
+  <div class="row">
+    <div class="message">
+      <div class="message-name">
+        <h3> FontAwesome Icon Here </h3>
+      </div>
+      <div class="message-body">
+        <p> here's where copy will go about how cool we are</p>
+      </div>
+      <div class="message-name">
+        <h3> FontAwesome Icon Here </h3>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="message">
+      <div class="message-name">
+        <h3> FontAwesome Icon Here </h3>
+      </div>
+      <div class="message-body">
+        <p> here's where copy will go about how cool we are</p>
+      </div>
+      <div class="message-name">
+        <h3> FontAwesome Icon Here </h3>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="message">
+      <div class="message-name">
+        <h3> FontAwesome Icon Here </h3>
+      </div>
+      <div class="message-body">
+        <p> here's where copy will go about how cool we are</p>
+      </div>
+      <div class="message-name">
+        <h3> FontAwesome Icon Here </h3>
+      </div>
+    </div>
+  </div>
 </div>
+
+<%= render "shared/footer" %>
+
+
+
+
+
+
