--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,6 @@
     <a href="#"><i class="fa fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    Conjured up with <i class="fa fa-heart"></i> by Hamza, Julia, and Brian at Le Wagon Montréal
+    Conjured up with <i class="fa fa-heart"></i> from Hamza, Julia, and Brian at Le Wagon Montréal
   </div>
 </div>
