added links to footer copyright

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,6 @@
     <a href="#"><i class="fa fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    conjured up with <i class="fa fa-heart"></i> from hamza, julia, and brian at <%= link_to "Le Wagon Montréal", "https://www.lewagon.com/montreal" %>
+    conjured up with <i class="fa fa-heart"></i> from <%= link_to "hamza", "https://www.linkedin.com/in/hamzaboughaleb/" %>, <%= link_to "julia", "https://www.linkedin.com/in/julia-rix-b9176ba8/" %>, and <%= link_to "brian", "https://www.linkedin.com/in/brian-clary-77004442/" %> at <%= link_to "Le Wagon Montréal", "https://www.lewagon.com/montreal" %>.
   </div>
 </div>
