--- a/app/views/pages/_navbar_home.html.erb
+++ b/app/views/pages/_navbar_home.html.erb
@@ -11,7 +11,7 @@
 
       <!-- Links when logged in -->
       <%= link_to "My Projects", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Add a Project", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Add a Project", "/projects/new", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "My Tasks", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
