--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([@project]) do |f| %>
+<%= simple_form_for(@project) do |f| %>
   <%= f.input :title %>
   <%= f.input :start_date %>
   <%= f.input :end_date %>
