Created backend and links to projects page

--- a/app/views/pages/_navbar_home.html.erb
+++ b/app/views/pages/_navbar_home.html.erb
@@ -10,7 +10,7 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "My Projects", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "My Projects", "/projects/", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Add a Project", "/projects/new", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "My Tasks", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
