added some html to the project show page

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,26 @@
-<h1>Hola Papi!!!</h1>
+<%= render "shared/navbar" %>
+<%= render "shared/banner" %>
 
-<h2>Make some projects happen here!</h2>
+<h1><stong><i> THIS IS THE PROJECTS PAGE <i><strong></h1>
+
+<h2><strong>DESCRIPTION OF THE PROJECT:<strong></h2>
+
+<p><i>In west Philadelphia born and raised, on the playground was where I spent most of my days. Chillin' out maxin' relaxin' all cool, and all shootin' some b-ball outside of the school, when a couple of guys who were up to no good...Started making trouble in my neighborhood...I got in one little fight and my mom got scared—-she said: You're movin with your auntie and uncle in Bel Air.<i></p>
+
+<h2> Here's a good spot to break the page with a banner with copy indicating the info below is info related to the project, like a "dashboard" of sorts.</h2>
+
+<h2> (Maybe on the left) Gannt Task Manager </h2>
+
+<h2> Location of the project (Geocoding?) </h2>
+
+<h2> (Maybe on to the right side) Location of the project (Geocoding?) </h2>
+
+<p>a button could be handy if we <%= link_to "a handy button", class="btn-treehouse" %> want to send a message to everyone involved in the job</p>
+
+<%= render "shared/footer" %>
+
+
+
+
+
+
