--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,8 +1,8 @@
 <div class="col-xs-12 col-sm-6 col-md-4">
-  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path project.photo.path, height: 300, width: 400, :crop =>"fill" %>);" >
+  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path skill.photo.path, height: 300, width: 400, :crop =>"fill" %>);" >
 
     <div class="card-description">
-      <h2><%= project.name %></h2>
+      <h2><%= project.title %></h2>
     </div>
 
     <% if project.user.facebook_picture_url? %>
