updating-html-for-user-profile-page

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/navbar" %>
+
 
 <h1><stong><i> THIS IS A PARTICULAR PROJECT'S PAGE <i><strong></h1>
 
@@ -11,6 +13,8 @@
 
 <h2> Location of the project on a google map? </h2>
 
-<p>a button could be handy if we want to send a message to everyone involved in the job or launch the chat function</p>
+<p>IDEA: a button could be handy if we want to send a message to everyone involved in the job or launch the chat function:</p>
 
 <a href="#" class="btn-treehouse">message my team</a>
+
+
