--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,8 +5,8 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "My Projects", "/projects/", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Add a Project", "/projects/new", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "My Projects", projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Add a Project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "My Tasks", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
