fixed ugly navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,8 @@
+<div class="navbar-wagon">
+  <!-- Logo -->
+  <%= link_to root_path, class: "navbar-wagon-brand" do %>
+    <%= image_tag "logo.png" %>
+  <% end %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
@@ -5,14 +10,14 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "My Projects", "/projects/", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Add a Project", "/projects/new", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "My Projects", projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Add a Project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "My Tasks", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <% avatar_url = current_user.facebook_picture_url || current_user.ln_picture_url || "http://placehold.it/30x30" %>
+          <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
           <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
@@ -50,4 +55,4 @@
       </ul>
     </div>
   </div>
-</div> -->
+</div>
