- Changed path to behave according to new routes - set project in Tasks controller to use project ID - adapted redirections to nesting in project - added a migration to remove previous polymorphic references. - added a migration to add the  relationships between the 3 main tables where tasks make the transition between users and projects - defined the relationships as"projects_as_owner" and "projects_as_contributor" - Isolated the shared navbar to show differences with the original one - Changed forms for tasks to accept project and task parameters - Nested tasks into projects

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,6 +15,6 @@
 
 <h2> (Maybe on to the right side) Location of the project (Geocoding?) </h2>
 
-<p>a button could be handy if we <%= link_to "a handy button", class="btn-treehouse" %> want to send a message to everyone involved in the job</p>
+<p>a button could be handy if we <%= link_to "a handy button", class: "btn-treehouse" %> want to send a message to everyone involved in the job</p>
 
 <%= render "shared/footer" %>
