--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container col-xs-4">
   <h2>Add a new task</h2>
   <%= render 'form' %>
-  <%= link_to 'Back', tasks_path %>
+  <%= link_to 'Back', project_tasks_path(@project) %>
 </div>
