--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,10 +8,10 @@
 <p><%= @task.start_date %></p>
 <p><%= @task.end_date %></p>
 
-<%= link_to "All tasks", tasks_path %>
-<%= link_to 'Edit', edit_task_path(@task) %>
-<%= link_to  "Add a new task", new_task_path %>
-<%= link_to "Delete task", task_path(@task),
+<%= link_to "All tasks", project_tasks_path %>
+<%= link_to 'Edit', edit_project_task_path(@project, @task) %>
+<%= link_to  "Add a new task", new_project_task_path %>
+<%= link_to "Delete task", project_task_path(@project, @task),
       method: :delete,
       data: { confirm: "Are you sure?" } %>
 
