--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,16 +1,9 @@
 <div class="col-xs-12 col-sm-6 col-md-4">
-  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2))">
-
-    <div class="card-description">
-      <h2><%= project.title %></h2>
+  <%= link_to project_path(project), class: "card-link"  do %>
+    <div class="card" style="background-color: #357aa9">
+      <div class="card-description">
+        <h2><%= project.title %></h2>
+      </div>
     </div>
-
-    <% if project.user.facebook_picture_url? %>
-      <% avatar_url = project.user.facebook_picture_url || "http://placehold.it/30x30" %>
-    <% else %>
-      <% avatar_url = (cl_image_path project.user.photo.path)  || "http://placehold.it/30x30" %>
-    <% end %>
-    <%= image_tag avatar_url, class: "card-user" %>
-    <%= link_to "", project_path(project), class: "card-link" %>
-  </div>
+  <% end %>
 </div>
