removed home navbar partial and put the navbar partial on the application layout page - put home banner as a partial and rendered it in home page - removed footer partial on every page and rendered it on the layout

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 
+<div class="container">
 <h1>All my projects here</h1>
 
-<div class="main-container">
   <div class="cards-container col-xs-12 col-sm-9">
     <% @projects.each do |project| %>
         <%= render "shared/card", project: project %>
@@ -9,8 +9,6 @@
   </div>
 </div>
 
-
-<%= render "shared/footer" %>
 
 
 
