--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,6 @@
-<h1><%= @task.title %></h1>
+<h1>TASK NAME : <%= @task.title %></h1>
 
-<p><%= @task.specialty %></p>
+<p> Specialty: <%= @task.specialty %></p>
 <p><%= @task.priority %></p>
 <p><%= @task.description %></p>
 <p><%= @task.budget %></p>
