--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,4 @@
-
-<%= render "navbar_home" %>
-
-<div class="banner parallax" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('./assets/img/header.jpg');">
-  <div class="banner-content">
-    <h1 class="text-center">active blueprint</h1>
-    <h2 class="text-center">project-management transparency every step of the way</h2>
-    <a href="/users/sign_in.html" class="btn btn-primary">get started now</a>
-  </div>
-</div>
-
+<%= render "home_banner" %>
 <div class="container">
   <div class="row">
     <div class="message">
@@ -50,8 +40,6 @@
     </div>
   </div>
 </div>
-
-<%= render "shared/footer" %>
 
 
 
