--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,10 +1,24 @@
-<%= simple_form_for(@project) do |f| %>
-  <%= f.input :title %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
-  <%= f.input :description %>
-  <%= f.input :projected_budget %>
-  <%= f.input :address %>
-  <%= f.input :status %>
-  <%= f.submit %>
-<% end %>
+
+  <%= simple_form_for(@project) do |f| %>
+    <% if @project.errors.any? %>
+      <div id=“error_explanation”>
+        <ul>
+        <% @project.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <div class="form-inputs">
+      <%= f.input :title %>
+      <%= f.input :start_date %>
+      <%= f.input :end_date %>
+      <%= f.input :description %>
+      <%= f.input :projected_budget %>
+      <%= f.input :address %>
+      <%= f.input :status %>
+    </div>
+    <div class="form-actions">
+      <%= f.submit %>
+    </div>
+  <% end %>
