--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fa fa-github"></i></a>
+    <a href="https://github.com/hboughaleb/active-blueprint"><i class="fa fa-github"></i></a>
     <a href="#"><i class="fa fa-instagram"></i></a>
     <a href="#"><i class="fa fa-facebook"></i></a>
     <a href="#"><i class="fa fa-twitter"></i></a>
