--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/navbar" %>
+<body>
     <div class="wrapper">
         <div class="page-header page-header-small" filter-color="orange">
             <div class="page-header-image" data-parallax="true" style="background-image: url('../assets/img/bg5.jpg');">
@@ -27,6 +27,7 @@
                 </div>
             </div>
         </div>
+      </div>
         <div class="section">
             <div class="container">
                 <div class="button-container">
@@ -105,7 +106,6 @@
                 </div>
             </div>
         </div>
-      <%= render "shared/footer" %>
     </div>
 </body>
 <!--   Core JS Files   -->
