--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,10 +1,27 @@
-<%= simple_form_for(@project) do |f| %>
-  <%= f.input :title %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
-  <%= f.input :description %>
-  <%= f.input :projected_budget %>
-  <%= f.input :address %>
-  <%= f.input :status %>
-  <%= f.submit %>
+<%= simple_form_for ([@project] ), html: { class: "form-group"} do |f| %>
+  <% if @project.errors.any? %>
+    <div id=“error_explanation”>
+      <ul>
+      <% @project.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div class="form-inputs">
+    <%= f.input :title, input_html: { placeholder: "Give Your Project a Name", class: 'form-control' } %>
+    <%= f.input :address, input_html: { placeholder: "Project Adress", class: 'form-control' } %>
+    <%= f.input :description, input_html: { placeholder: "be specific...", class: 'form-control' } %>
+    <%= f.input :projected_budget, input_html: { placeholder: "", class: 'form-control' } %>
+    <%= f.input :status, collection: [ "Stand by", "Pending Ok", "Pending Blocked", "Closed", "Adandonned", "Completed"], input_html: {  class: 'form-control' } %>
+    <%= f.input :start_date, input_html: { placeholder: "", class: 'form-control' } %>
+    <%= f.input :end_date, input_html: { placeholder: "", class: 'form-control' } %>
+  </div>
+
+  <div class="form-actions">
+    <%= f.submit class: "btn btn-success" %>
+  </div>
 <% end %>
+
+
+
