--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
       <!-- Links when logged in -->
       <%= link_to "My Projects", projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Add a Project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "My Tasks", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "All my Tasks", all_tasks_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
