All CRUD actions full functioning for projects

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>Edit <%= @project.title %></h2>
   <%= render 'form' %>
-  <%= link_to 'Back', new_project_path(@project) %>
+  <%= link_to 'Back', projects_path %>
 </div>
 
