--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,11 +12,11 @@
 <div>
 
 <div>
-  <%= link_to "Edit Project", new_project_path, class:'button' %>
+  <%= link_to "Edit Project", edit_project_path(@project), class:'button' %>
 </div>
 
 <dir>
-  <%= link_to "Delete Project", projects_path, class:'button' %>
+  <%= link_to "Delete Project", @project, class:'button', method: :delete %>
 </dir>
 
 <div>
