--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,7 @@
-
-<%= render "navbar_home" %>
-
 <div class="banner parallax" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('./assets/img/header.jpg');">
   <div class="banner-content">
-    <h1 class="text-center">active blueprint</h1>
-    <h2 class="text-center">project-management transparency every step of the way</h2>
+    <h1 class="text-center"> active blueprint </h1>
+    <h2 class="text-center"> workflow transparency each step of the way </h2>
     <a href="/users/sign_in.html" class="btn btn-primary">get started now</a>
   </div>
 </div>
@@ -16,7 +13,7 @@
         <h3> FontAwesome Icon Here </h3>
       </div>
       <div class="message-body">
-        <p> here's where copy will go about how cool we are</p>
+        <p> efficiency: get the job done in fewer clicks—like a boss </p>
       </div>
       <div class="message-name">
         <h3> FontAwesome Icon Here </h3>
@@ -29,7 +26,7 @@
         <h3> FontAwesome Icon Here </h3>
       </div>
       <div class="message-body">
-        <p> here's where copy will go about how cool we are</p>
+        <p> easy peasy: sit back. the algorithm learns your style </p>
       </div>
       <div class="message-name">
         <h3> FontAwesome Icon Here </h3>
@@ -42,7 +39,7 @@
         <h3> FontAwesome Icon Here </h3>
       </div>
       <div class="message-body">
-        <p> here's where copy will go about how cool we are</p>
+        <p> transparency: be in the know. </p>
       </div>
       <div class="message-name">
         <h3> FontAwesome Icon Here </h3>
@@ -50,9 +47,6 @@
     </div>
   </div>
 </div>
-
-<%= render "shared/footer" %>
-
 
 
 
