--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Change your password</h2>
+<h2>change your password:</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -7,7 +7,7 @@
   <%= f.full_error :reset_password_token %>
 
   <div class="form-inputs">
-    <%= f.input :password, label: "new password", required: true, autofocus: true, hint: ("minimum of #{@minimum_password_length} characters needed" if @minimum_password_length) %>
+    <%= f.input :password, label: "new password:", required: true, autofocus: true, hint: ("note: minimum of #{@minimum_password_length} characters needed" if @minimum_password_length) %>
     <%= f.input :password_confirmation, label: "please confirm your new password:", required: true %>
   </div>
 
