--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
     <div class="form-inputs">
       <%= f.input :email, required: true, autofocus: true %>
-      <%= f.input :password, required: true, hint: ("minimum of #{@minimum_password_length} characters needed" if @minimum_password_length) %>
+      <%= f.input :password, required: true, hint: ("note: minimum of #{@minimum_password_length} characters needed" if @minimum_password_length) %>
       <%= f.input :password_confirmation, required: true %>
     </div>
 
