--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,9 +10,9 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "My Projects", projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Add a Project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "My Tasks", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "my projects", projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "add a project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "my tasks", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
@@ -22,17 +22,17 @@
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
               <%= link_to user_path(current_user) do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "My Profile") %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "my profile") %>
               <% end %>
             </li>
             <li>
               <%= link_to projects_path do %>
-                <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
+                <i class="fa fa-home"></i>  <%= t(".profile", default: "home") %>
               <% end %>
             </li>
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Sign out") %>
+                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "sign out") %>
               <% end %>
             </li>
           </ul>
@@ -40,7 +40,7 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to t(".sign_in", default: "log in"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
 
@@ -49,9 +49,9 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+        <li><a href="#">mobile link 1</a></li>
+        <li><a href="#">mobile link 2</a></li>
+        <li><a href="#">mobile link 3</a></li>
       </ul>
     </div>
   </div>
