tweaks to user profile, projects page, project page

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <h2>Edit <%= @project.title %></h2>
+  <h2>edit: <%= @project.title %></h2>
   <%= render 'form' %>
-  <%= link_to 'Back', projects_path %>
+  <%= link_to '<— take me back', projects_path %>
 </div>
 
