--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,31 +1,17 @@
-<%= render "shared/navbar" %>
-
-
-<div>
-  <h1><%= @project.title %></h1>
-  <p><%= @project.description %></p>
-  <p><%= @project.projected_budget %></p>
-  <p><%= @project.address %></p>
-  <p><%= @project.start_date %></p>
-  <p><%= @project.end_date %></p>
-  <p><%= @project.status %></p>
-<div>
-
-<div>
-  <%= link_to "Edit Project", edit_project_path(@project), class:'button' %>
+<div class="text-center">
+  <h1> <%= @project.title %> </h1>
+  <p> <%= @project.description %> </p>
+  <p> budget: <%= @project.projected_budget %></p>
+  <p> address: <%= @project.address %> </p>
+  <p><strong>Timespan:</strong>
+    <p>your project's slated to begin <%= @project.start_date %> and wrap up <%= @project.end_date %></p>
+<!--   <p><%= @project.status %></p>
+ -->
 </div>
 
-<dir>
-  <%= link_to "Delete Project", @project, class:'button', method: :delete %>
-</dir>
-
-<div>
-  <a href="#" class="btn-treehouse">message my team</a>
+<div class="text-center">
+  <%= link_to "assign task(s)", edit_project_path(@project), class:'btn btn-primary' %>
+  <p> wanna make tweaks or even scrap it and start over? </p>
+  <%= link_to "tweak it", edit_project_path(@project), class:'btn btn-primary' %> ||
+  <%= link_to "scrap it", @project, class:'btn btn-primary', method: :delete %>
 </div>
-
-
-
-<p>a button could be handy if we <%= link_to "a handy button", class: "btn-treehouse" %> want to send a message to everyone involved in the job</p>
-
-<%= render "shared/footer" %>
-
