--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="container">
 
   <% @tasks.each do |task| %>
     <%= task.specialty %> | <%= task.priority %> | <%= task.title %> | <%= task.description %> | <%= task.budget %> | <%= task.status %> | <%= task.start_date %> | <%= task.end_date %>
