removed set task from projects controller and got rid of the raise

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -25,10 +25,9 @@
         <li><%= task.end_date %></li>
       </ul>
 
-      <%= link_to '', project_task_path(task.project, task),  class:'btn btn-primary %>
-      <p> wanna make tweaks or even scrap it and start over? </p>
-      <%= link_to 'Edit', edit_project_task_path(task.project, task),  class:'btn btn-primary %>
-      <%= link_to "Delete task", project_task_path(task.project, task),  class:'btn btn-primary,
+      <%= link_to 'Check', project_task_path(task.project, task),  class:'btn btn-primary' %>
+      <%= link_to 'Edit', edit_project_task_path(task.project, task),  class:'btn btn-primary' %>
+      <%= link_to "Delete task", project_task_path(task.project, task),  class:'btn btn-primary',
         method: :delete,
         data: { confirm: "Are you sure?" } %>
     <% end %>
