--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,73 +1,72 @@
-
-<div class="wrapper">
-    <div class="page-header page-header-small" filter-color="orange">
-        <div class="page-header-image" data-parallax="true" style="background-image: url('./assets/images/homepage-image.jpg');"></div>
-        <div class="container">
-            <div class="content-center">
-                <div class="photo-container">
-                    <img src="../assets/img/ryan.jpg" alt="../assets/img/ryan.jpg"></div>
-                <h3 class="title"> Ryan Gosling </h3>
-                <p class="category">Sasketchewan Extraordinaire</p>
-                <div class="content">
-                    <div class="social-description">
-                        <h2>26</h2>
-                        <p>ongoing projects</p>
+<body class="profile-page sidebar-collapse">
+    <div class="wrapper">
+        <div class="page-header page-header-small" filter-color="orange">
+            <div class="page-header-image" data-parallax="true" style="background-image: url('./assets/images/user-show.jpg');">
+            </div>
+            <div class="container">
+                <div class="content-center">
+                    <div class="photo-container">
+                        <img src="current_user.picture_url" alt="assets/images/ryan.jpg">
                     </div>
-                    <div class="social-description">
-                        <h2>26</h2>
-                        <p>outstanding tasks</p>
-                    </div>
-                    <div class="social-description">
-                        <h2>48</h2>
-                        <p>reviews</p>
+                    <h3 class="title"> user first, user last </h3>
+                    <p class="category"> perhaps put the user's job title and company here? </p>
+                    <div class="content">
+                        <div class="social-description">
+                            <h2> total number of current user's projects </h2>
+                            <p> projects currently running </p>
+                        </div>
+                        <div class="social-description">
+                            <h2> total number of contributors with whom the user is working </h2>
+                            <p> ongoing collaborations </p>
+                        </div>
+                        <div class="social-description">
+                            <h2> 48 </h2>
+                            <p> reviews </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="section">
-        <div class="container">
-            <div class="button-container">
-                <a href="#button" class="btn btn-primary btn-round btn-lg">message</a>
-            </div>
-            <h3 class="title">about me</h3>
-            <h5 class="description">In west Philadelphia born and raised, on the playground was where I spent most of my days. Chillin' out maxin' relaxin' all cool, and all shootin' some b-ball outside of the school, when a couple of guys who were up to no good...Started making trouble in my neighborhood...I got in one little fight and my mom got scared—-she said: You're movin with your auntie and uncle in Bel Air.</h5>
-            <div class="row">
-                <div class="col-md-6 ml-auto mr-auto">
-                    <h4 class="title text-center">my portfolio</h4>
-                    <div class="nav-align-center">
-                        <ul class="nav nav-pills nav-pills-primary" role="tablist">
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#profile" role="tablist">
-                                    <i class="now-ui-icons design_image"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" data-toggle="tab" href="#home" role="tablist">
-                                    <i class="now-ui-icons location_world"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#messages" role="tablist">
-                                    <i class="now-ui-icons sport_user-run"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+        <div class="section">
+            <div class="container">
+                <div class="button-container">
+                    <a href="#button" class="btn btn-primary btn-round btn-lg">send a message</a>
                 </div>
+                <h3 class="title">about me</h3>
+                <h5 class="description">Iiiiiiiin West Philadelphia born and raised, on the playground was where I spent most of my days. Chillin out, maxin, relaxin, all cool and all shootin some b-ball outside of the school.</h5>
+                <div class="row">
+                    <div class="col-md-6 ml-auto mr-auto">
+                        <h4 class="title text-center">my current projects</h4>
+                        <div class="nav-align-center">
+                            <ul class="nav nav-pills nav-pills-primary" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#profile" role="tablist">
+                                        <i class="now-ui-icons design_image"></i>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#home" role="tablist">
+                                        <i class="now-ui-icons location_world"></i>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#messages" role="tablist">
+                                        <i class="now-ui-icons sport_user-run"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <!-- Tab panes -->
                     <div class="tab-content gallery">
                         <div class="tab-pane active" id="home" role="tabpanel">
                             <div class="col-md-10 ml-auto mr-auto">
                                 <div class="row collections">
-                                    <div class="col-md-6">
-                                        <img src="../assets/img/bg1.jpg" alt="" class="img-raised">
-                                        <img src="../assets/img/bg3.jpg" alt="" class="img-raised">
-                                    </div>
-                                    <div class="col-md-6">
-                                        <img src="../assets/img/bg8.jpg" alt="" class="img-raised">
-                                        <img src="../assets/img/bg7.jpg" alt="" class="img-raised">
-                                    </div>
+                                    <div class="cards-container col-xs-12 col-sm-9">
+                                        <% @projects.each do |project| %>
+                                          <%= render "shared/card", project: project %>
+                                            <% end %>
+                                          </div>
                                 </div>
                             </div>
                         </div>
