--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
-<div class="banner parallax" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('homepage-bg.jpg');">
+<div class="banner parallax" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('homepage-bg.png');">
   <div class="banner-content">
-    <h1 class="text-center">the answer's in your pocket</h1>
-    <h2 class="text-center">project-management transparency wherever you are in the world</h2>
+    <h1 class="text-center">the new frontier</h1>
+    <h2 class="text-center">in project-management transparency</h2>
   </div>
 </div>
 
