--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,9 @@
     <%= render "shared/navbar" %>
     <%= render 'shared/flashes' %>
     <%= yield %>
+    <%= render "shared/footer" %>
     <%= javascript_include_tag 'application' %>
     <%= cloudinary_js_config %>
-    <%= render "shared/footer" %>
+    <%= yield(:after_js) %>
   </body>
 </html>
