tweaking of language

--- a/app/assets/stylesheets/pages/_userprofile.scss
+++ b/app/assets/stylesheets/pages/_userprofile.scss
@@ -169,7 +169,7 @@ a {
 // profile
 
 .profile-header-wrapper {
-  background: #53443F;
+  background: #919397;
 }
 .profile-header-container img {
   width: 100px;
