--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
       <div class="container profile-header-container text-center">
         <div class="profile-header-infos">
           <img src="images/papillard.jpeg" alt="">
-          <h1> user's name </h1>
+          <h1><%= user.name %></h1>
           <h2> user's title? </h2>
         </div>
         <div class="tabs">
@@ -34,8 +34,8 @@
         </div>
         <img src="shared/card" alt="" class="product-image">
         <div class='product-body'>
-          <h3><%= project.title %></h3>
-          <p><%= project.description %></p>
+          <h3> title of project </h3>
+          <p> description of project </p>
         </div>
         <ul class="list-inline product-controls">
           <li><a href=""><i class="fa fa-heart"></i></a></li>
@@ -50,8 +50,8 @@
         </div>
         <img src="shared/card" alt="" class="product-image">
         <div class='product-body'>
-          <h3><%= project.title %></h3>
-          <p><%= project.description %></p>
+          <h3> title of project </h3>
+          <p> description of project </p>
         </div>
         <ul class="list-inline product-controls">
           <li><a href=""><i class="fa fa-heart"></i></a></li>
@@ -66,8 +66,8 @@
         </div>
         <img src="shared/card" alt="" class="product-image">
         <div class='product-body'>
-          <h3><%= project.title %></h3>
-          <p><%= project.description %></p>
+          <h3> title of project </h3>
+          <p> description of project </p>
         </div>
         <ul class="list-inline product-controls">
           <li><a href=""><i class="fa fa-heart"></i></a></li>
