--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
       <div class="container profile-header-container text-center">
         <div class="profile-header-infos">
           <img src="images/papillard.jpeg" alt="">
-          <h1><%= user.name %></h1>
+          <h1> user's name </h1>
           <h2> user's title? </h2>
         </div>
         <div class="tabs">
